@@ -37,7 +37,7 @@
 
 #include <string.h>
 
-static const uint16_t FIRMWARE_VERSION = 0x0608;
+static const uint16_t FIRMWARE_VERSION = 0x060A;
 
 // 1 flash row
 static const uint8_t DEFAULT_CONFIG[128] =
